force-app/main/default/objects/Job_Inventory_Consumption__c/Job_Inventory_Consumption__c.object-meta.xml
<CustomObject>
    <label>Job Inventory Consumption</label>
    <nameField>
        <displayFormat>JIC-{000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Inventory Consumptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>