force-app/main/default/objects/Job_Inventory_Consumption__c/fields/Inventory__c.field-meta.xml
<CustomField>
    <fullName>Inventory__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Inventory</label>
    <referenceTo>TrackIT__Inventory__c</referenceTo>
    <relationshipLabel>Consumption on Jobs</relationshipLabel>
    <relationshipName>Job_Inventory_Consumptions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>