force-app/main/default/objects/Job_Inventory_Consumption__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>From Location</label>
    <referenceTo>TrackIT__Location__c</referenceTo>
    <relationshipLabel>Job Inventory Consumptions</relationshipLabel>
    <relationshipName>Job_Inventory_Consumptions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>