force-app/main/default/objects/Job_Inventory_Consumption__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Krow__Project__c.Krow__Archived__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Krow__Project__c.Krow__Task_Template__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Krow__Project__c.Krow__Project_Template__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Krow__Project__c</referenceTo>
    <relationshipLabel>Job Inventory Consumptions</relationshipLabel>
    <relationshipName>Job_Inventory_Consumptions</relationshipName>
    <type>Lookup</type>
</CustomField>