force-app/main/default/objects/Job_Inventory_Consumption__c/fields/Quantity_Used__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Used__c</fullName>
    <label>Quantity Used</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>