force-app/main/default/objects/Job_Inventory_Consumption__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>TrackIT__Work_Order__c</referenceTo>
    <relationshipLabel>Parts Used</relationshipLabel>
    <relationshipName>Job_Inventory_Consumptions</relationshipName>
    <type>Lookup</type>
</CustomField>